<?xml version="1.0"?>
<project
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.wordpress.salaboy.emergencyservice</groupId>
        <artifactId>emergency-service</artifactId>
        <version>0.4-SNAPSHOT</version>
    </parent>

    <artifactId>emergency-service-run</artifactId>
    <packaging>pom</packaging>
    <name>Emergency Service - Run</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jetty.version>6.1.4</jetty.version>
        <spring.version>3.0.5.RELEASE</spring.version>
        <slf4j.version>1.6.0</slf4j.version>
        <java.version>1.5</java.version>
        <junit.version>4.8.2</junit.version>
    </properties>

    <profiles>
        <!--core -->
        <profile>
            <id>core</id>
            <build>
                <defaultGoal>exec:exec</defaultGoal>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <!-- mac osx for infinispan -->
                                <!--argument>-Xmx2048m</argument>
                                <argument>-Xms1024m</argument>
                                <argument>-XX:MaxPermSize=1024M</argument-->
                                <argument>-Djgroups.bind_addr=127.0.0.1</argument>
                                <argument>-Djava.net.preferIPv4Stack=true</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>com.wordpress.salaboy.CoreServer</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>${project.groupId}</groupId>
                    <artifactId>emergency-service-core</artifactId>
                </dependency>
            </dependencies>
        </profile>

        <!--city map -->
        <profile>
            <id>win32</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <properties>
                <platform>win</platform>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <platform>linux32</platform>
            </properties>
        </profile>
        <profile>
            <id>linux64</id>
            <activation>
                <os>
                    <family>unix</family>
                </os>
            </activation>
            <properties>
                <platform>linux64</platform>
            </properties>
        </profile>
        <profile>
            <id>mac</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <properties>
                <platform>mac</platform>
            </properties>
        </profile>
        <profile>
            <id>citymap</id>
            <properties>
                <native.path>${project.build.directory}/natives</native.path>
            </properties>
            <build>
                <defaultGoal>dependency:unpack exec:exec</defaultGoal>
                <plugins>
                    <!--get slick native lib -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.lwjgl</groupId>
                                    <artifactId>lwjgl-native</artifactId>
                                    <version>${lwjgl.version}</version>
                                    <classifier>${platform}</classifier>
                                    <outputDirectory>${native.path}</outputDirectory>
                                    <overWrite>false</overWrite>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </plugin>
                    <!--run -->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <!-- mac osx for infinispan -->
                                <argument>-Djgroups.bind_addr=127.0.0.1</argument>
                                <argument>-Djava.net.preferIPv4Stack=true</argument>
                               
                                <argument>-Djava.library.path=${native.path}/</argument>
                                <!--<argument>-d32</argument> -->
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>com.wordpress.salaboy.emergencyservice.worldui.slick.WorldUI</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>${project.groupId}</groupId>
                    <artifactId>emergency-service-citymap</artifactId>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl</artifactId>
                    <version>${lwjgl.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.lwjgl</groupId>
                    <artifactId>lwjgl-jinput</artifactId>
                    <version>${lwjgl.version}</version>
                </dependency>
            </dependencies>
            <repositories>
                <repository>
                    <id>b2s-repo</id>
                    <url>http://b2s-repo.googlecode.com/svn/trunk/mvn-repo</url>
                </repository>
            </repositories>
        </profile>

        
        
        <!--dashboard -->
        <profile>
            <id>dashboard</id>
            <build>
                <defaultGoal>exec:exec</defaultGoal>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <!-- mac osx for infinispan -->
                                <argument>-Djgroups.bind_addr=127.0.0.1</argument>
                                <argument>-Djava.net.preferIPv4Stack=true</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>com.wordpress.salaboy.emergencyservice.dashboard.EmergenciesDashboard</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>${project.groupId}</groupId>
                    <artifactId>emergency-service-dashboard</artifactId>
                </dependency>
            </dependencies>
        </profile>
        
         <!--sensors -->
        <profile>
            <id>sensors</id>
            <build>
                <defaultGoal>exec:exec</defaultGoal>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
				 <!-- mac osx for infinispan -->
                                <argument>-Djgroups.bind_addr=127.0.0.1</argument>
                                <argument>-Djava.net.preferIPv4Stack=true</argument>
                                <argument>-d32</argument>
                                <argument>-classpath</argument>
                                <classpath />
                                <argument>com.wordpress.salaboy.sensor.ui.MainFrame</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>${project.groupId}</groupId>
                    <artifactId>emergency-service-sensor</artifactId>
                </dependency>
            </dependencies>
        </profile>


        <profile>
            <id>tasklists</id>
            <build>
                <defaultGoal>exec:exec</defaultGoal>
                <plugins>
                     <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.1.1</version>
                        <executions>
                            <execution>
                                <id>Run Jetty</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <executable>mvn</executable>
                            <commandlineArgs>jetty:run-war -Ptasklists -Djava.net.preferIPv4Stack=true -Djgroups.bind_addr=127.0.0.1</commandlineArgs>
                        </configuration>
                    </plugin>
                   
                    <plugin>
                        <groupId>org.mortbay.jetty</groupId>
                        <artifactId>maven-jetty-plugin</artifactId>
                        <version>6.1.25</version>
                        <configuration>
                            <webApp>../emergency-service-tasklists/target/ui.war</webApp>
                            <tmpDirectory>../emergency-service-tasklists/target</tmpDirectory>
                            <scanIntervalSeconds>3</scanIntervalSeconds>
                            <connectors>
                                <connector
                                    implementation="org.mortbay.jetty.nio.SelectChannelConnector">
                                    <port>8081</port>
                                </connector>
                            </connectors>
                            
                            <contextPath>emergency-services</contextPath>
                            <tmpDirectory>../emergency-service-tasklists/target</tmpDirectory>

                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
        <!-- JBoss Repository used for Java EE 6 pieces -->
        <repository>
            <id>repository.jboss.org</id>
            <name>JBoss Repository</name>
            <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
        </repository>

        <repository>
            <id>org.springframework.maven.milestone</id>
            <name>Spring Maven Milestone Repository</name>
            <url>http://maven.springframework.org/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>slickrepo</id>
            <name>slickrepo</name>
            <url>http://slick.cokeandcode.com/mavenrepo/</url>
        </repository>

        <repository>
            <id>jboss</id>
            <name>jboss</name>
            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
        </repository>

        <repository>
            <id>OW2</id>
            <url>http://maven.ow2.org/maven2/</url>
        </repository>
        <repository>
            <id>PlugTree</id>
            <name>PlugTree-Snapshots-CloudBees</name>
            <url>https://repository-plugtree-org.forge.cloudbees.com/snapshot/</url>
            <!--snapshots -->
            <!--enabled>true</enabled -->
            <!--updatePolicy>always</updatePolicy -->
            <!--/snapshots -->
        </repository>
        <repository>
            <id>Sonatype-public</id>
            <name>SnakeYAML repository</name>
            <url>http://oss.sonatype.org/content/groups/public/</url>
        </repository>

    </repositories>
</project>
